# helldivers2-rs

./: Cargo.toml  README.md
src/: lib.rs  middleware.rs  prelude.rs
src/models/: assignment.rs  campaign.rs  dispatch.rs  impl.md  mod.rs  planet.rs  stats.rs  war.rs
src/models/common/: assignment.rs  mod.rs  planet.rs
src/models/raw/: assignment.rs  campaign.rs  dispatch.rs  mod.rs  planet.rs  stats.rs  war.rs
src/models/v1/: assignment.rs  campaign.rs  dispatch.rs  planet.rs  stats.rs  war.rs
tests/: assignment.rs  campaign.rs  dispatch.rs  planet.rs  war.rs
